# SuperSurfer

./: .gitignore  Cargo.toml  README.md  browser-router-spec.md  mise.toml
.github/workflows/: ci.yml
docs/: manual.md
packaging/linux/: build-cross.sh  build.sh  install.sh  supersurfer.desktop
packaging/macos/: Info.plist  build-app.sh  launcher.swift  set-default.swift
packaging/windows/: build-cross.sh  build.ps1  build.sh
src/: bootstrap.rs  cli.rs  context.rs  input_url.rs  lib.rs  logging.rs  main.rs  routing.rs
src/browser/: cache.rs  discover_windows.rs  launch.rs  mod.rs  registry.rs
src/config/: cache.rs  loader.rs  mod.rs  prepare.rs  scaffold.rs  supersurfer.d.ts  transpile.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/process/: linux.rs  macos.rs  mod.rs  windows.rs
src/script/: helpers.js  runtime.rs
src/url_clean/: mod.rs
