[package]
name = "supersurfer"
version = "0.1.0"
edition = "2021"
description = "Cross-platform default browser router with TypeScript config"
license = "MIT"
repository = "https://github.com/Jabe/SuperSurfer"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
globset = "0.4"
regex = "1"
rquickjs = { version = "0.8", features = ["macro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = { version = "0.3", features = ["formatting"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
